[metadata]
name = anaplan-api
version = 0.0.2
author = Jesse Wilson
author_email = jeswils@gmail.com
description = For implementing Anaplan Bulk API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeswils-ap/anaplan-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True