[metadata]
name = anaplan-api
version = 0.1.1
author = Jesse Wilson
author_email = jeswils@gmail.com
description = For implementing Anaplan Bulk API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeswils-ap/anaplan-api
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
scripts =
    src/anaplan_api/anaplan.py
    src/anaplan_api/anaplan_auth.py
    src/anaplan_api/anaplan_resource_dictionary.py
    src/anaplan_api/AnaplanConnection.py
package_dir=
    =src
packages = find:
include_package_data = True

[options.packages.find]
where=src